--- a/journal/201912.md
+++ b/journal/201912.md
@@ -21,7 +21,7 @@ https://twitter.com/decredproject/status/1206661133161127936
 
 [dcrd](https://github.com/decred/dcrd):
 
-Checkpoint logic [simplified](https://github.com/decred/dcrd/pull/2014) to pave the way to support checkpoints based on headers alone. { SB: can we put in context of latest consensus changes (assuming related to that)? }. Checkpoints are now also configurable by the caller. Orphan handling decoupled and [moved](https://github.com/decred/dcrd/pull/2008) from blockchain to block manager. In the bigger picture, these changes will help to decouple the connection code from the download logic, as required for [multi-peer](https://github.com/decred/dcrd/issues/1145) parallel downloading.
+Checkpoint logic [simplified](https://github.com/decred/dcrd/pull/2014) to pave the way to support checkpoints based on headers alone. Checkpoints are now also configurable by the caller. Orphan handling decoupled and [moved](https://github.com/decred/dcrd/pull/2008) from blockchain to block manager. In the bigger picture, these changes will help to decouple the connection code from the download logic, as required for [multi-peer](https://github.com/decred/dcrd/issues/1145) parallel downloading.
 
 Memory usage of conditional execution logic in txscript [optimized](https://github.com/decred/dcrd/pull/2011) by replacing the condition stack with two integers.
 
