People small fix

--- a/journal/201912.md
+++ b/journal/201912.md
@@ -114,9 +114,9 @@ Welcome to new first time contributors with code merged to master: vdg0 ([tinyde
 
 Congratulations to the contributor listed on [decred.org](https://decred.org/contributors/):
 
-- Amir Massarwa (amass, Developer)
+- Amir Massarwa (@amass, Developer)
 
-Community stats:
+Community stats as of Jan 3:
 
 - Politeia users: {} (+{})
 - Twitter followers: 40,897 (+256)
@@ -128,7 +128,7 @@ Community stats:
 - YouTube subscribers: 3,960 (+40)
 - Facebook followers: 3,552 (+245, likes: 3,223 (+196)
 - LinkedIn followers: 674 (+12)
-- GitHub dcrd stars: 528 (+8), forks: 1,500 (+100)
+- GitHub dcrd stars: 528 (+8), forks: 1,458 (+58)
 
 ## Governance
 
