Governance small fix

--- a/journal/201912.md
+++ b/journal/201912.md
@@ -134,11 +134,11 @@ Community stats as of Jan 3:
 
 In December the [Treasury](https://explorer.dcrdata.org/address/Dcur2mcGjmENx4DhNqDctW5wJCVyT3Qeqkx) received 14,406 DCR and spent 10,106 DCR. Using December's daily average DCR/USD rate of $18.32, this is $264K received and $185K spent. At November's average daily rate of $19.97, the USD figure billed for work completed in that month is $202K. As of Jan 1, Treasury balance is 643,836 DCR (10.9 million USD at $16.87).
 
-December was an unusually quiet month for Politeia, with no new proposals submitted. Two proposals from Nov were voted on in Dec. The [TinyDecred budget](https://proposals.decred.org/proposals/ad0f9688b3467734e2581604914b2cc32c6eb7991dff460eff41d21f66d88451) proposal was approved with 85% approval and voter participation of 32.6%. The [PlusBit POS App](https://proposals.decred.org/proposals/e559188b0febcab29c49c1f7dd5c66645e31be00894a150ef7d0b8ceb6486605) was rejected with 39% approval and participation of 30.6%.
+December was an unusually quiet month for Politeia, with no new proposals submitted. Two proposals from November were voted on in December. The [TinyDecred budget](https://proposals.decred.org/proposals/ad0f9688b3467734e2581604914b2cc32c6eb7991dff460eff41d21f66d88451) proposal was approved with 85% approval and voter participation of 32.6%. The [PlusBit POS App](https://proposals.decred.org/proposals/e559188b0febcab29c49c1f7dd5c66645e31be00894a150ef7d0b8ceb6486605) was rejected with 39% approval and participation of 30.6%.
 
 Following analysis of the public orderbooks which raised questions about the level of liquidity provision, i2 Trading have provided full trading history logs that will allow for their performance to be scrutinized in detail. Company 0 are working on a set of tools for auditing i2's performance in relation to the criteria specified in their proposal.
 
-Politeia Digest has been taking a break while the level of politeia activity is low, it will return when new proposals are submitted.
+Politeia Digest has been taking a break while the level of Politeia activity is low, it will return when new proposals are submitted.
 
 ## Network
 
