--- a/journal/201912.md
+++ b/journal/201912.md
@@ -7,6 +7,7 @@ _Image: {caption: "$title by $author. $optional-description" for artwork, or jus
 {introduction, major news of the month ordered by impact, don't put any links here}
 
 - v1.5 final!
+- headercommitments CV progress
 - Happy New Year!
 
 ## v1.5
@@ -142,22 +143,21 @@ Politeia Digest has been taking a break while the level of Politeia activity is 
 
 ## Network
 
+Hashrate: December's hashrate opened at ~370 Ph/s and closed ~400 Ph/s, bottoming at 275 Ph/s and peaking at 522 Ph/s throughout the month. Pool hashrate distribution as of Jan 2: Poolin 31.7%, UUPool 24%, lab.antpool.com 11.9%, F2Pool 2.2%, BTC.com 1.8%, BeePool 0.09%, CoinMine 0.09%, suprnova 0.02%, Luxor 0.02% and others 28% per [dcrstats.com](https://dcrstats.com/pow). Pool distribution numbers are approximate and cannot be accurately determined.
 
-Hashrate: December's hashrate opened at ~440 Ph/s and closed ~400 Ph/s, bottoming at 306 Ph/s and peaking at 486 Ph/s throughout the month. Pool hashrate distribution as of Jan 2nd: Poolin 31.7%, UUPool 24%, lab.antpool.com 11.9%, f2pool 2.2%, BTC.com 1.8%, BeePool 0.09%, Coinmine 0.09%, suprnova 0.02%, Luxor 0.02% and others 28%  per [dcrstats.com](https://dcrstats.com/pow). Pool distribution numbers are approximate and cannot be accurately determined.
+After staying between 400-450 Ph/s in November, in December the hashrate declined futher and briefly went below 300 Ph/s (last time it touched this level during a short dip in Apr 2018).
 
-Staking: 30-day average ticket price was 137.53 DCR (−2.73) per dcrstats.com. The price varied between 123-158.76 DCR. Locked amount was 5.41-5.59 million DCR, which corresponded to 49.95-51.8% of the available supply.
+Staking: 30-day average ticket price was 137.5 DCR (+2.7) per dcrstats.com. The price varied between 123.1-158.76 DCR. Locked amount was 5.37-5.61 million DCR, which corresponded to 49.75-51.90% of the available supply.
 
-Once again the ticket price made a new high of 158.71 since the sdiff algorithm change, while 51.8% is the new all-time high of stake participation.
+Once again the ticket price made a new high of 158.76 since the sdiff algorithm change, while 51.9% is the new all-time high of stake participation.
 
-Nodes: Throughout [November](https://charts.dcr.farm/d/000000014/nodes?orgId=1&from=1572562800000&to=1577833199000) there was an average of 194 public listening nodes and 388 normal nodes per dcr.farm. Version distribution: 65% use dcrd v1.4. 10% use dcrd v1.5, 9.5% use dcrd v1.5 dev and RC builds. 9.5% use dcrwallet v1.4, 3.8% use dcrwallet v1.5 and 1.9% use dcrd dev builds.
+Nodes: Throughout [December](https://charts.dcr.farm/d/000000014/nodes?orgId=1&from=1575158400000&to=1577836799000) there was an average of 175 public listening nodes and 391 normal nodes per dcr.farm. Version distribution: 56% use dcrd v1.4, 10% use dcrd v1.5, 8.8% use dcrd v1.5 dev and RC builds, 6% use dcrwallet v1.4, 1.9% use dcrwallet v1.5.
 
-As of [Dec 12](https://twitter.com/lefebvre_dustin/status/1205224368407748616), 16.1% of all DCR in circulation have used CoinShuffle++ for privacy.
+Header commitments [consensus vote](https://voting.decred.org/): As of Jan 6, PoS voters upgrade phase is completed (>75% voters upgraded) while PoW miners are at 82% of 95%.
 
-mainnet LN shows 4 nodes as of Jan 5 https://ln-map.jamieholdstock.com/
+On [Dec 12](https://twitter.com/lefebvre_dustin/status/1205224368407748616), 16.1% of all DCR in circulation participated in CoinShuffle++ mixing.
 
-## Mining
-
-{new miners, relevant news about existing miners, interesting events or stats}
+Decred mainnet [LN map](https://ln-map.jamieholdstock.com/) shows 7 nodes and 7 channels as of Jan 7.
 
 ## Integrations
 
