--- a/journal/201912.md
+++ b/journal/201912.md
@@ -167,7 +167,7 @@ Decred mainnet [LN map](https://ln-map.jamieholdstock.com/) shows 7 nodes and 7 
 
 Welcome to a [new](https://github.com/decred/dcrwebapi/pull/82) VSP [99split.com](https://99split.com/) with a 0.99% fee.
 
-dcr.pos.fans VSP [removed](https://github.com/decred/dcrwebapi/pull/79) from the listing since it has proven to be unreliable.
+dcr.pos.fans VSP [removed](https://github.com/decred/dcrwebapi/pull/79) from the [listing](https://decred.org/vsp/) since it has proven to be unreliable.
 
 Warning: the authors of Decred Journal have no idea about the trustworthiness of any of the services above. Please do your own research before trusting your personal information or assets to any entity.
 
