--- a/journal/201912.md
+++ b/journal/201912.md
@@ -173,35 +173,22 @@ Warning: the authors of Decred Journal have no idea about the trustworthiness of
 
 ## Outreach
 
-Outreach in December features RC 1.5.0, which featured Dave Collins educating about consensus changes on both [Decred Assembly](https://www.youtube.com/watch?v=gGQuY0kOt7g) and [Decred in Depth](https://www.youtube.com/watch?v=D1527JwkDrs). The additional [Decred in Depth episode featured Matheus Degiovani on Lightning Network](https://www.youtube.com/watch?v=dZeqrQpf-aU). The copy for the new website was put into GitHub and submitted to the Web_Ops team in Matrix for assembly. The new site is expected to publish in January.
+Outreach in December features RC 1.5.0, with @davecgh educating about consensus changes on both [Decred Assembly](https://www.youtube.com/watch?v=gGQuY0kOt7g) and [Decred in Depth](https://www.youtube.com/watch?v=D1527JwkDrs). The additional Decred in Depth [episode](https://www.youtube.com/watch?v=dZeqrQpf-aU) featured @matheusd on Lightning Network. The copy for the new website was put into GitHub and submitted to the #web_ops team in Matrix for assembly. The new site is expected to publish in January.
 
-Much of the rest of the month focused on reflection, discussion, and planning for 2020. [@bee published his thoughts here](), which prompted vigorous discussion in #Proposals, as Ditto and Dustorf look to prepare their next proposals. Dustorf followed up with [a survey](https://www.surveymonkey.com/results/SM-9JRDSMFS7/) soliticing community input on priorities regarding geographies, market segments, and possible applications. He will also publish a summary of marketing expenditures prior to his next proposal. 
-
-Ditto is collecting ideas for their 3rd PR proposal https://matrix.to/#/!MIGqWXfLFBwhipPKYL:decred.org/$157609160161317ZZSti:decred.org
+Much of the rest of the month focused on reflection, discussion, and planning for 2020. @bee's post on [marketing strategies](https://xaur.github.io/writings/posts/20191127-marketing-strategies.html) prompted [vigorous discussion](https://matrix.to/#/!MIGqWXfLFBwhipPKYL:decred.org/$157617150861861VoZeT:decred.org) in #proposals, as Ditto and @Dustorf look to prepare their next proposals. @Dustorf followed up with [a survey](https://www.surveymonkey.com/results/SM-9JRDSMFS7/) soliticing community input on priorities regarding geographies, market segments, and possible applications. He will also publish a summary of marketing expenditures prior to his next proposal. 
 
 Ditto's December achievements:
 
-* Placed CoinDesk Year-in-Review [op-ed](https://www.coindesk.com/its-time-to-walk-the-talk-on-decentralized-governance) by Jake about decentralized governance “It’s Time to Walk the Talk on Decentralized Governance”.
-
-* CoinDesk [article](https://www.coindesk.com/planned-sale-of-org-angers-many-open-source-crypto-developers) on the sale of .org domains, which includes a quote from Richardred.
-
-* Off the Chain [podcast](https://www.youtube.com/watch?v=NNg5G_EZxtU&feature=youtu.be) with Anthony Pompliano and Akin, talking about crypto in Africa and Decred’s unique governance
-
-* NasdaqTV TradeTalks [segment](https://www.nasdaq.com/videos/tradetalks%3A-blockchain-emerging-technologies-in-africa) with Akin talking about blockchain in Africa.
-
-* Arranged and attended a media tour with Akin in NYC, where he met in person with reporters at The Block, Fortune, Pomp’s Off the Chain  podcast, and the Chain Reaction podcast (pending publication).
-
-* Secured Cigars and Crypto [podcast](https://anchor.fm/investnoir3/episodes/Episode-73---AkinSawyerr-e9pnmu) with Akin, which aired on Christmas Day.
-
-* Prepared panel briefing doc and conducted media outreach for Akin’s participation at the Digital Money Forum at CES (Tuesday, January 7).  Arranged for him to speak on the “The Libra Effect” [panel](https://thedigitalmoneyforum.com/2020-agenda/), alongside Michael Casey of CoinDesk and Dante Disparte of the Libra Association.
-
-* Spearheaded Decred’s most noteworthy achievement of 2019 Twitter [poll](https://twitter.com/decredproject/status/1207060170855141376). The winner was the privacy implementation, with 36.6% of the vote, followed by Politeia & DAO progress (33.1%). 475 people participated in the poll.
-
-* Identified and shared opportunities for the community to engage with Crypto Twitter and educate outsiders about Decred. Lately, the community has been abuzz on the unique contractor model at Decred, particularly for developers. With the community contributing more than 40 unique posts using #cryptodevs and a new handle @dcrgoodfirst as a new aggregate of good first issues for developers interested in contributing to Decred.
-
-* Developed Phase 3 Ditto PR proposal, which will be live on Politeia mid-January.
-
-
+- Placed CoinDesk Year-in-Review [op-ed](https://www.coindesk.com/its-time-to-walk-the-talk-on-decentralized-governance) by @jy-p about decentralized governance "It's Time to Walk the Talk on Decentralized Governance".
+- CoinDesk [article](https://www.coindesk.com/planned-sale-of-org-angers-many-open-source-crypto-developers) on the sale of .org domains, which includes a quote from @richardred.
+- Off the Chain [podcast](https://www.youtube.com/watch?v=NNg5G_EZxtU) with Anthony Pompliano and @akinsawyerr, talking about crypto in Africa and Decred's unique governance
+- NasdaqTV TradeTalks [segment](https://www.nasdaq.com/videos/tradetalks%3A-blockchain-emerging-technologies-in-africa) with @akinsawyerr talking about blockchain in Africa.
+- Arranged and attended a media tour with @akinsawyerr in NYC, where he met in person with reporters at The Block, Fortune, Pomp's Off the Chain podcast, and the Chain Reaction podcast (pending publication).
+- Secured Cigars and Crypto [podcast](https://anchor.fm/investnoir3/episodes/Episode-73---AkinSawyerr-e9pnmu) with @akinsawyerr, which aired on Christmas Day.
+- Prepared panel briefing doc and conducted media outreach for @akinsawyerr's participation at the Digital Money Forum at CES (Jan 7). Arranged for him to speak on the "The Libra Effect" [panel](https://thedigitalmoneyforum.com/2020-agenda/), alongside Michael Casey of CoinDesk and Dante Disparte of the Libra Association.
+- Spearheaded Decred's most noteworthy achievement of 2019 Twitter [poll](https://twitter.com/decredproject/status/1207060170855141376). The winner was the privacy implementation, with 36.6% of the votes, followed by Politeia & DAO progress (33.1%). 475 people participated in the poll.
+- Identified and shared opportunities for the community to engage with Crypto Twitter and educate outsiders about Decred. Lately, the community has been abuzz on the unique contractor model at Decred, particularly for developers. With the community contributing more than 40 unique posts using [#cryptodevs](https://twitter.com/hashtag/cryptodevs) and a new handle [@dcrgoodfirst](https://twitter.com/dcrgoodfirst) as a new aggregate of good first issues for developers interested in contributing to Decred.
+- Developed Phase 3 Ditto PR proposal, which will be live on Politeia mid-January.
 
 ## Events
 
@@ -266,8 +253,6 @@ Comm systems news:
 - {}
 
 {selected discussed topics, as bullet list or one paragraph per topic}
-
-A lot of thoughtful discussion of marketing took place in [#proposals](https://matrix.to/#/!MIGqWXfLFBwhipPKYL:decred.org/$157617150861861VoZeT:decred.org) following Ditto's call for feedback for their phase 3 proposal and @bee's [Marketing Strategies](https://xaur.github.io/writings/posts/20191127-marketing-strategies.html) article.
 
 Heating a chicken coop with DCR mining rigs discussed in [#pow-mining](https://matrix.to/#/!NNzHoaSdnsbZDQOXJr:decred.org/$157534140455245zYGLX:decred.org).
 
