--- a/journal/201912.md
+++ b/journal/201912.md
@@ -197,17 +197,15 @@ Attended:
 - Nov 6 - [Bitcoin & Blockchains Meetup](https://www.facebook.com/events/1444182132424731/) - Oaxaca, Mexico. @evok3d represented Decred. ([photos](https://twitter.com/ev0k3d/status/1192945388329807874), _missed in Nov_)
 - Dec 4 - [Decred Demo](https://www.meetup.com/blockchaincentre/events/266659342/) - Melbourne, Australia. @eSizeDave and @zohand were invited to present Decred at Blockchain Centre's newly introduced Talk & Trade format. The demo of Politeia and Decrediton was expected to take 30 minutes but the total time surpassed 1.5 hours, which allowed to talk about key aspects of Decred and have a debate among the ~20 participants. ([report](https://github.com/decredcommunity/events/blob/master/reports/20191204-blockchain-centre-talk-and-trade-melbourne-australia.md))
 - Dec 7 - Blockchain Communities Meetup - Mexico City, Mexico. Organized by Blockchain Bajio at Bitcoin Embassy Bar. (photos: [1](https://twitter.com/Decred_ES/status/1204144823231488000), [2](https://twitter.com/BlockchainBajio/status/1209141039086362624), [3](https://twitter.com/NancyNSalazar/status/1209143989984808961))
-- Dec 12-13 - [Labitconf](https://www.labitconf.com/) - Montevideo, Uruguay. A team of 7 Decred Latam ambassadors presented the project during 2 days of the event. Previous efforts to build awareness in Latam became evident as many projects attending the event knew about Decred. Having no booth in a single place allowed the team to be everywhere, and they suggest to consider this approach for events of this size (~1000 visitors). Check the [full report](https://github.com/decredcommunity/events/blob/master/reports/20191212-labitconf-montevideo-uruguay.md) for notable interactions and other details.
+- Dec 12-13 - [Labitconf](https://www.labitconf.com/) - Montevideo, Uruguay. A team of 7 Decred Latam ambassadors represented the project during 2 days of the event. Previous efforts to build awareness in Latam became evident as many projects attending the event knew about Decred. Having no booth in a single place allowed the team to be everywhere, and they suggest to consider this approach for events of this size (~1000 visitors). Check the [full report](https://github.com/decredcommunity/events/blob/master/reports/20191212-labitconf-montevideo-uruguay.md) for notable interactions and other details.
 - Dec 15 - [Crypto & Christmas](https://www.meetup.com/blockchaincentre/events/267037974/) - Melbourne, Australia. Decred Australia organized a party together with Blockchain Centre, Cointree and e-Pocket. @eSizeDave and @zohand gave a brief intro to Decred and its achievements to ~20 attendees and used the opportunity to engage with them more directly. ([report](https://github.com/decredcommunity/events/blob/master/reports/20191215-crypto-and-christmas-melbourne-australia.md))
-- Dec 20 - Bitcoin Embassy Bar [First Anniversary Meetup](https://twitter.com/Decred_ES/status/1207380289107959809) - Mexico City, Mexico. (photos: [1](https://twitter.com/Decred_ES/status/1208204612215418887), [2](https://twitter.com/Decred_ES/status/1208257098565345282))
+- Dec 20 - [Bitcoin Embassy Anniversary](https://twitter.com/Decred_ES/status/1207380289107959809) - Mexico City, Mexico. Bitcoin Embassy invited Decred Latam team to be present and sponsor the event, thanks to good relationships established earlier. @francov\_, @victorarubin and @luisantoniocrag talked all night about Decred with most of the attendees. ([report](https://github.com/decredcommunity/events/blob/master/reports/20191220-bitcoin-embassy-anniversary-mexico-city-mexico.md))
 
 Upcoming:
 
-- {remove if release after 7} Jan 7 - [Digital Money Forum](https://thedigitalmoneyforum.com/) - Las Vegas, USA. The event is part of CES 2020. @akinsawyerr will talk on a [session](https://thedigitalmoneyforum.com/Sessions/the-problem-with-old-money-a-great-debate/) about future economy.
-- Jan 29-31 - [Crypto 101 Online Summit](https://www.crypto2020summit.com/) - the web. @lukebp will give an overview of Decred's plans for 2020.
+- Jan 29-31 - [Crypto 101 Online Summit](https://www.crypto2020summit.com/) - online. @lukebp will give an overview of Decred's plans for 2020.
 - Apr 13-17 - Blockchain Land at Talent Land - Guadalajara, Mexico. Decred will be sponsor of Talent Land and be present with a booth at Blockchain Land.
 - May, date TBA - [BitConf](https://www.bitconf.com.br/portal/) - São Paulo, Brazil. The event was moved to May 2020.
-- {still planned? @joshuam} 5-year anniversary event for the Bitcoin Vietnam community. Details TBD.
 
 ## Media
 
