--- a/journal/201912.md
+++ b/journal/201912.md
@@ -209,23 +209,19 @@ Upcoming:
 
 ## Media
 
-{community efforts: Decred Assembly, websites, etc}
-
-{ratings news}
-
 Selected articles:
 
-- https://medium.com/@_Checkmatey_/decred-hypersecure-unforgeably-scarce-e076b91a2be {rr:this was in prev issue}
-- Decred On-Chain: The Ticket Pool VWAP by @permabullnino ([medium](https://medium.com/@permabullnino/decred-on-chain-the-ticket-pool-vwap-d0a3d1c42a3))
-- Does Decred have the answers to on-chain governance? by Kerman Kohli, missed in Nov ([medium](https://medium.com/decred/does-decred-have-the-answers-to-on-chain-governance-d35bdd176f59))
-- Overview of 'staking' in a variety of projects by @richardred ([blockcommons.red](https://www.blockcommons.red/publication/staking/))
-- It’s Time to Walk-the-Talk on Decentralized Governance by @jy-p, part of Coindesk's year in review ([coindesk](https://www.coindesk.com/its-time-to-walk-the-talk-on-decentralized-governance))
+- Decrediton on Tails by @mm ([stakey.club](https://stakey.club/en/decrediton-on-tails/), also [in Portuguese](https://stakey.club/pt/decrediton-no-tails/), _missed in Nov_)
+- Does Decred Have the Answers to On-chain Governance? by Kerman Kohli ([medium](https://medium.com/decred/does-decred-have-the-answers-to-on-chain-governance-d35bdd176f59), _missed in Nov_)
+- Decred On-chain: The Ticket Pool VWAP by @permabullnino ([medium](https://medium.com/@permabullnino/decred-on-chain-the-ticket-pool-vwap-d0a3d1c42a3))
+- Overview of 'Staking' in a Variety of Projects by @richardred ([blockcommons.red](https://www.blockcommons.red/publication/staking/))
+- It's Time to Walk-the-Talk on Decentralized Governance by @jy-p, part of CoinDesk's year in review ([coindesk](https://www.coindesk.com/its-time-to-walk-the-talk-on-decentralized-governance))
 - Introducing DownloadHawk by @degeri ([blog.decred.org](https://blog.decred.org/2019/12/16/Introducing-DownloadHawk/))
-- {title in Title Case} by {author} ([{domain}]({link}) - {optional comment}
 
 Translations:
 
-- {}
+- My experience setting up a Decred full-node - [in Spanish](https://medium.com/decred-es/mi-experiencia-configurando-un-nodo-completo-de-decred-d5321304bc48) by @pablito
+- Decred Journal - November 2019 translated to Arabic (@arij), Chinese (@Dominic) and Spanish (@luisantoniocrag and @francov\_). Thank you all!
 
 Videos:
 
