--- a/journal/201912.md
+++ b/journal/201912.md
@@ -226,19 +226,19 @@ Translations:
 Videos:
 
 - Decred Assembly Deep Dive - Lightning Network with @matheusd ([youtube](https://www.youtube.com/watch?v=N3WO5YXpD7M))
-- TradeTalk https://twitter.com/TradeTalks/status/1207743521471393792 {any better link than pscp.tv?}
+- TradeTalks: Blockchain & Emerging Technologies in Africa. Jill Malandrino and Akin Sawyerr discuss emerging technology in Africa. ([nasdaq.com](https://www.nasdaq.com/videos/tradetalks%3A-blockchain-emerging-technologies-in-africa))
 
 Audio:
 
-- PoV Crypto - 105 — Fight Night XI: BTC vs ETH vs DCR, with Checkmate. An in depth debate of the Bitcoin, Ethereum and Decred perspectives on a variety of blockchain subjects. ([youtube](https://youtu.be/7m1kfM0fqaE))
-- Decred in Depth Ep. 15 features @davecgh giving an in depth overview of v1.5 and the block header commitments consensus rule change proposal. Dave covers the detail of what the proposal involves, and the ways in which it will enhance the network if approved. ([soundcloud](https://soundcloud.com/decredindepth/ep-15-dave-collins-btc-suite-origins-dcrd-15))
-- Decred in Depth Ep. 14 - @matheusd talks about getting into Lightning Network development through his work on ticket-splitting, the challenges of porting Lightning Labs lnd to Decred, and the various ways in which the basis in btcd helps. ([soundcloud](https://soundcloud.com/decredindepth/ep-14-matheus-degiovani-dcr-lightning-network))
-- Off the Chain - How Crypto is Bridging the Gap Between the Banked and Unbanked - @akin has an extensive interview with Pomp about cryptocurrency and Africa. ([spotify](https://open.spotify.com/episode/1FGOnQb84YpGTZfwbEzdAg))
-- Cigars and Crypto - @akin talks about Africa and Decred. ([anchor.fm](https://anchor.fm/investnoir3/episodes/Episode-73---AkinSawyerr-e9pnmu))
+- POV Crypto 105 - Fight Night XI: BTC vs ETH vs DCR, with @Checkmate. An in depth debate of the Bitcoin, Ethereum and Decred perspectives on a variety of blockchain subjects. ([youtube](https://www.youtube.com/watch?v=7m1kfM0fqaE))
+- Decred in Depth Ep. 15 features @davecgh giving an in depth overview of v1.5 and the block header commitments consensus rule change proposal. Dave covers the detail of what the proposal involves, and the ways in which it will enhance the network if approved. ([youtube](https://www.youtube.com/watch?v=D1527JwkDrs), [soundcloud](https://soundcloud.com/decredindepth/ep-15-dave-collins-btc-suite-origins-dcrd-15))
+- Decred in Depth Ep. 14 - @matheusd talks about getting into Lightning Network development through his work on ticket-splitting, the challenges of porting Lightning Labs lnd to Decred, and the various ways in which the basis in btcd helps. ([youtube](https://www.youtube.com/watch?v=dZeqrQpf-aU), [soundcloud](https://soundcloud.com/decredindepth/ep-14-matheus-degiovani-dcr-lightning-network))
+- Off the Chain - How Crypto is Bridging the Gap Between the Banked and Unbanked - @akinsawyerr has an extensive interview with Anthony Pompliano about cryptocurrency and Africa. ([youtube](https://www.youtube.com/watch?v=NNg5G_EZxtU), [spotify](https://open.spotify.com/episode/1FGOnQb84YpGTZfwbEzdAg))
+- Cigars and Crypto 73 - @akinsawyerr talks about Africa and Decred. ([anchor.fm](https://anchor.fm/investnoir3/episodes/Episode-73---AkinSawyerr-e9pnmu))
 
-{maybe: sentiment} https://twitter.com/LunarCRUSH/status/1208975910013026304
+Decred bullish sentiment hit a yearly hign, according to [LunarCRUSH](https://twitter.com/LunarCRUSH/status/1208975910013026304).
 
-Art by @AGNFAB1 https://twitter.com/AGNFAB1/status/1208044700634157056 {dig more art links}
+@AGNFAB1 posted [more](https://www.reddit.com/r/decred/comments/eevd8f/decred/) of his Decred art. Previous works: [Christmas](https://twitter.com/AGNFAB1/status/1208044700634157056), [Banking on Decred](https://twitter.com/AGNFAB1/status/1199788339404181504), [Tacotime Trilogy](https://www.reddit.com/r/Monero/comments/dzh6vr/tacotime_trilogy/), [Decentralized Credits](https://www.reddit.com/r/decred/comments/dqocpf/decentralized_credits/).
 
 ## Community Discussions
 
