--- a/journal/201912.md
+++ b/journal/201912.md
@@ -242,35 +242,30 @@ Decred bullish sentiment hit a yearly hign, according to [LunarCRUSH](https://tw
 
 ## Community Discussions
 
-Comm systems news:
-
-- {}
-
-{selected discussed topics, as bullet list or one paragraph per topic}
-
-Heating a chicken coop with DCR mining rigs discussed in [#pow-mining](https://matrix.to/#/!NNzHoaSdnsbZDQOXJr:decred.org/$157534140455245zYGLX:decred.org).
-
 Selected Reddit posts:
 
-- This [post](https://www.reddit.com/r/decred/comments/ecvjaj/the_decred_security_curve_you_want_to_double/) linking to a twitter thread about Decred's security attracted 39 comments in which one user argued at length that exchanges could execute an attack where they drained the treasury.
+- This [post](https://www.reddit.com/r/decred/comments/ecvjaj/the_decred_security_curve_you_want_to_double/) linking to a Twitter thread about Decred's security attracted 39 comments in which one user argued at length that exchanges could execute an attack where they drained the Treasury.
 - This [post](https://www.reddit.com/r/decred/comments/e8v7pd/other_than_staking_sending_to_exchanges_what/) asked what people use Decred for other than staking and sending to exchanges.
 
 Selected Twitter action:
 
 - Bug [Bounty](https://twitter.com/decredproject/status/1208067535532437511) hunters, check out v1.5.
 - A @decredproject [poll](https://twitter.com/decredproject/status/1207060170855141376) asking about the most noteworthy achievement of 2019 had 475 responses. 37% went for Privacy, 33% for Politeia/DAO, 19% for Lightning Network and 11% for DEX.
-- Merry [Stakemas](https://twitter.com/DCRComic/status/1209541923737886721) from @DCRComic and [Dcristmas](https://twitter.com/AGNFAB1/status/1208044700634157056) from @AGNFAB1
-- @buck54321's [campaign](https://twitter.com/blockchainbuck/status/1201988834575224832) for the TinyDecred proposal targetted older voters
-- @exitus [tweeting](https://twitter.com/coveryfire7777/status/1208499268987867138) about v1.5 Dark Mode
-- @Dustorf's [year](https://twitter.com/lefebvre_dustin/status/1207756052382593026) in Decred
-- @degeri announces [DownloadHawk](https://twitter.com/degeri_crypto/status/1206639882485075968) which watches the Decred downloads and raises the alarm if they're tampered with.
-- @ammarooni [thread](https://twitter.com/Ammarooni/status/1208060799736004611) about Decred as Bitcoin's younger sibling
+- Merry [Stakemas](https://twitter.com/DCRComic/status/1209541923737886721) from @DCRComic.
+- @buck54321's [campaign](https://twitter.com/blockchainbuck/status/1201988834575224832) for the TinyDecred proposal targeted older voters.
+- @Exitus [tweeting](https://twitter.com/coveryfire7777/status/1208499268987867138) about v1.5 Dark Mode.
+- @Dustorf's [year](https://twitter.com/lefebvre_dustin/status/1207756052382593026) in Decred.
+- @ammarooni [thread](https://twitter.com/Ammarooni/status/1208060799736004611) about Decred as Bitcoin's younger sibling.
 
 DCRComic:
-- [DEX](https://twitter.com/DCRComic/status/1211672109321248768)
-- [Ticket Rick](https://twitter.com/DCRComic/status/1204049820350111744) - a reference to Pickle Rick from the Rick & Morty animated show.
-- [Collective Intelligence](https://twitter.com/DCRComic/status/1202601872919543811)
 
+- [DEX](https://twitter.com/DCRComic/status/1211672109321248768).
+- [Ticket Rick](https://twitter.com/DCRComic/status/1204049820350111744) - a reference to Pickle Rick from the Rick & Morty animated show.
+- [Collective Intelligence](https://twitter.com/DCRComic/status/1202601872919543811).
+
+Chats:
+
+- Heating [chicken coops](https://matrix.to/#/!NNzHoaSdnsbZDQOXJr:decred.org/$157534140455245zYGLX:decred.org) and mushroom farms with DCR mining rigs.
 
 ## Markets
 
