Events add upcoming

--- a/journal/201912.md
+++ b/journal/201912.md
@@ -201,6 +201,7 @@ Attended:
 Upcoming:
 
 - Jan 29-31 - [Crypto 101 Online Summit](https://www.crypto2020summit.com/) - online. @lukebp will give an overview of Decred's plans for 2020.
+- Feb 4-6 - Africa Tech Summit - Kigali, Rwanda. @akinsawyerr will be a speaker in the Money & Blockchain Summit.
 - Apr 13-17 - Blockchain Land at Talent Land - Guadalajara, Mexico. Decred will be sponsor of Talent Land and be present with a booth at Blockchain Land.
 - May, date TBA - [BitConf](https://www.bitconf.com.br/portal/) - São Paulo, Brazil.
 
@@ -333,6 +334,6 @@ Your [feedback](https://github.com/xaur/decred-news/blob/docs/contributing.md#fe
 
 Credits (alphabetical order):
 
-- writing and editing: bee, Dustorf, degeri, fguisso, margaret\_mei, richardred, s\_ben
+- writing and editing: akinsawyerr, bee, Dustorf, degeri, fguisso, margaret\_mei, richardred, s\_ben
 - reviews and feedback: buck54321, chappjc, Checkmate, davecgh, dnldd, lukebp, matheusd, raedah
 - title image: {}
