--- a/journal/201912.md
+++ b/journal/201912.md
@@ -6,7 +6,7 @@ _Image: {caption: "$title by $author. $optional-description" for artwork, or jus
 
 Happy New Year! Decred highlights for December:
 
-- v1.5 final!
+- v1.5 final version was released
 - headercommitments CV solid progress
 
 ## v1.5 Upgrade Notice
@@ -114,7 +114,7 @@ Dev activity stats for December: 41 active PRs, 242 master commits, 55K added an
 
 Welcome to new first time contributor with code merged to master: vdg0 ([tinydecred](https://github.com/decred/tinydecred/commits?author=vdg0)).
 
-Congratulations to the contributor listed on [decred.org](https://decred.org/contributors/):
+Congratulations to the new contributor listed on [decred.org](https://decred.org/contributors/):
 
 - Amir Massarwa (@amass, Developer)
 
@@ -148,7 +148,7 @@ Politeia Digest has been taking a break while the level of Politeia activity is 
 
 Hashrate: December's hashrate opened at ~370 Ph/s and closed ~400 Ph/s, bottoming at 275 Ph/s and peaking at 522 Ph/s throughout the month. Pool hashrate distribution as of Jan 2: Poolin 32%, UUPool 24%, lab.antpool.com 12%, F2Pool 2.2%, BTC.com 1.8%, BeePool 0.09%, CoinMine 0.09%, suprnova 0.02%, Luxor 0.02% and others 28% per [dcrstats.com](https://dcrstats.com/pow). Pool distribution numbers are approximate and cannot be accurately determined.
 
-After staying between 400-450 Ph/s in November, in December the hashrate declined futher and briefly went below 300 Ph/s (last time it visited this level during a short dip in Apr 2019).
+After staying between 400-450 Ph/s in November, in December the hashrate declined further and briefly went below 300 Ph/s (last time it visited this level during a short dip in Apr 2019).
 
 Staking: 30-day average ticket price was 137.5 DCR (+2.7) per dcrstats.com. The price varied between 123.1-158.76 DCR. Locked amount was 5.37-5.61 million DCR, which corresponded to 49.75-51.90% of the available supply.
 
@@ -170,9 +170,9 @@ Warning: the authors of Decred Journal have no idea about the trustworthiness of
 
 ## Outreach
 
-Outreach in December featured v1.5.0 RC, with @davecgh educating about consensus changes on both [Decred Assembly](https://www.youtube.com/watch?v=gGQuY0kOt7g) and [Decred in Depth](https://www.youtube.com/watch?v=D1527JwkDrs). The additional eposodes of [Decred in Depth](https://www.youtube.com/watch?v=dZeqrQpf-aU) and [Decred Assembly](https://www.youtube.com/watch?v=N3WO5YXpD7M) featured @matheusd on Lightning Network. The copy for the website update was put into GitHub and submitted to the #web\_ops team for assembly. The new site is expected to publish in January.
+Outreach in December featured v1.5.0, with @davecgh educating about consensus changes on both [Decred Assembly](https://www.youtube.com/watch?v=gGQuY0kOt7g) and [Decred in Depth](https://www.youtube.com/watch?v=D1527JwkDrs). The additional episodes of [Decred in Depth](https://www.youtube.com/watch?v=dZeqrQpf-aU) and [Decred Assembly](https://www.youtube.com/watch?v=N3WO5YXpD7M) featured @matheusd on Lightning Network. The copy for the website update was put into GitHub and submitted to the #web\_ops team for assembly. The new site is expected to publish in January.
 
-Much of the rest of the month focused on reflection, discussion, and planning for 2020. @bee's post on [marketing strategies](https://xaur.github.io/writings/posts/20191127-marketing-strategies.html) prompted [vigorous discussion](https://matrix.to/#/!MIGqWXfLFBwhipPKYL:decred.org/$157617150861861VoZeT:decred.org) in #proposals, as Ditto and @Dustorf look to prepare their next proposals. @Dustorf followed up with [a survey](https://www.surveymonkey.com/results/SM-9JRDSMFS7/) soliticing community input on priorities regarding geographies, market segments, and possible applications. He will also publish a summary of marketing expenditures prior to his next proposal.
+Much of the rest of the month focused on reflection, discussion, and planning for 2020. @bee's post on [marketing strategies](https://xaur.github.io/writings/posts/20191127-marketing-strategies.html) prompted [vigorous discussion](https://matrix.to/#/!MIGqWXfLFBwhipPKYL:decred.org/$157617150861861VoZeT:decred.org) in #proposals, as Ditto and @Dustorf look to prepare their next proposals. @Dustorf followed up with [a survey](https://www.surveymonkey.com/results/SM-9JRDSMFS7/) soliciting community input on priorities regarding geographies, market segments, and possible applications. He will also publish a summary of marketing expenditures prior to his next proposal.
 
 Ditto's December achievements:
 
@@ -224,7 +224,7 @@ Translations:
 Videos:
 
 - Decred Assembly Deep Dive - Lightning Network with @matheusd ([youtube](https://www.youtube.com/watch?v=N3WO5YXpD7M))
-- TradeTalks: Blockchain & Emerging Technologies in Africa. @akinsawyerr talks about the importance of governance crypto's prospect in Africa. ([nasdaq.com](https://www.nasdaq.com/videos/tradetalks%3A-blockchain-emerging-technologies-in-africa))
+- TradeTalks: Blockchain & Emerging Technologies in Africa. @akinsawyerr talks about the importance of governance for crypto's prospects in Africa. ([nasdaq.com](https://www.nasdaq.com/videos/tradetalks%3A-blockchain-emerging-technologies-in-africa))
 
 Audio:
 
@@ -276,7 +276,7 @@ VTC [suffered](https://cryptobriefing.com/vertcoin-51-attacked-once-again/) anot
 
 The Wharton Cryptogovernance Workshop [launched](https://twitter.com/ProfPieters/status/1205219084528431113) cryptogov.net, which includes "[Governance Assessments](https://cryptogov.net/view-responses-by-question/)", self-assessed answers to a standard set of questions about blockchain governance, compiled by members of the different projects. Decred was one of 3 projects to have its [answers](https://cryptogov.net/participating-projects/entry/14/) uploaded ahead of the launch. @akinsawyerr attended an [event](https://twitter.com/kwerb/status/1146505123876802564) at Wharton in Jul 2019 where the project was instigated, and also took the lead on preparing Decred's answers, with some assistance from @richardred.
 
-The results of the Zcash community sentiment polling were [released](https://www.zfnd.org/blog/community-sentiment-collection-results/), reporting results from the community advisory panel, forum users, and the lack of any input from PoW miners who did not signal support for any proposals. Voters could signal support for all 13 proposals by voting Yes/No on each one.
+The results of the Zcash community sentiment polling were [released](https://www.zfnd.org/blog/community-sentiment-collection-results/). Participants were the community advisory panel and forum users, none of the PoW miners chose to signal using the polling method offered to them. Voters could signal support for all 13 proposals by voting Yes/No on each one.
 
 There was very little support for proposals that did not continue to dedicate 20% of the block reward to development funding.
 
@@ -304,7 +304,7 @@ Etherscan.io, a popular Ethereum block explorer, was [blocked](https://www.coind
 
 Google [banned](https://news.bitcoin.com/google-bans-crypto-app-metamask-from-play-store/) Metamask, a browser app for interacting with Dapps, from its Play Store, for allegedly doing covert mining. While their appeal was initially [rejected](https://twitter.com/metamask_io/status/1210299207820570624), the ban was [overturned](https://thenextweb.com/hardfork/2020/01/03/google-lifts-ban-ethereum-wallet-app-metamask-mining-cryptocurrency/) a few days later.
 
-Google also purged a lot of crypto related videos, before reinstating them after deciding it was an [error](https://www.bbc.co.uk/news/technology-50924494). The incident apparently left many affected YouTube content producers [looking](https://news.bitcoin.com/youtube-christmas-purge-has-content-creators-pointing-to-these-alternate-platforms/) at the decentralized alternatives.
+Google also purged a lot of crypto related videos on Youtube, before reinstating them after deciding it was an [error](https://www.bbc.co.uk/news/technology-50924494). The incident apparently left many affected YouTube content producers [looking](https://news.bitcoin.com/youtube-christmas-purge-has-content-creators-pointing-to-these-alternate-platforms/) at the decentralized alternatives available to them.
 
 A Cryptocurrency Anti-Money Laundering [Report](https://ciphertrace.com/wp-content/uploads/2019/11/CipherTrace-Cryptocurrency-Anti-Money-Laundering-Report-2019-Q3.pdf) from CipherTrace mentioned Decred as a cryptocurrency with privacy features.
 
@@ -320,7 +320,7 @@ Months after launching a custodial staking service for Tezos, the Coinbase excha
 
 Algorand relay nodes voted to [accept](https://algorand.foundation/long-term-vesting-plan-vote-result) an [amendment](https://algorandfoundation.cdn.prismic.io/algorandfoundation/eb2a8c69-2262-42f8-99a4-09df485207b5_EIP-11252019AF_+Conditional+Accelerated+Vesting+Nov+30.pdf) to the vesting schedule of the tokens they received as grants from the Algorand Foundation. This amendment increases the number of Algo tokens relay nodes will receive by 25%, but extends the vesting schedule from 2 to 5 years, with a mechanism to speed it up if the Algo price rises. This concludes an [episode](https://algorand.foundation/voting-procedure-eip09092019pc) which started and was missed in Sep, with relay nodes voting to suspend their own rewards until a change to the vesting schedule could be agreed.
 
-There are around 81 Algorand relay nodes and these proposals were approved with yes votes from around 55 nodes. The Algorand nodes have completed KYC/AML checks and entered into a legal agreement with the foundation, such that part of the voting process for these proposals involved using DocuSign to sign and return copies of the amendment to the Foundation. KYC/AML checks are also [mandatory](https://algorand.foundation/200millionalgo-staking-rewards-kyc-extended) for Algo holders who wish to participate in staking and receive rewards.
+There are around 81 Algorand relay nodes and these proposals were approved with yes votes from around 55 nodes (plus many abstentions and a few no votes). The Algorand nodes have completed KYC/AML checks and entered into a legal agreement with the foundation, such that part of the voting process for these proposals involved using DocuSign to sign and return copies of the amendment to the Foundation. KYC/AML checks are also [mandatory](https://algorand.foundation/200millionalgo-staking-rewards-kyc-extended) for Algo holders who wish to participate in staking and receive rewards.
 
 A new [attack](https://arstechnica.com/information-technology/2020/01/pgp-keys-software-security-and-much-more-threatened-by-new-sha1-exploit/) on SHA-1 hash function published early January has a practical application of impersonating PGP/GnuPG users and signing any document in their name. The attack cost is estimated $45,000 and will decrease as computation gets cheaper. If you use GnuPG, configure it to not use SHA-1 for signatures or upgrade to 2.2.18+. Signatures for Decred [v1.5.0 release](https://github.com/decred/decred-binaries/releases/tag/v1.5.0) are not affected since they use SHA-256.
 
