Dev update dcrandroid

--- a/journal/201912.md
+++ b/journal/201912.md
@@ -82,7 +82,7 @@ Remaining tasks for the DEX are:
 
 [dcrandroid](https://github.com/decred/dcrandroid):
 
-Major redesign of the user interface to implement [multi-wallet support](https://github.com/decred/dcrandroid/pull/401) (running more than one wallet concurrently) finally merged after many months of work. All wallets are opened at startup using the same public passphrase. Most of the Java code was rewritten in Kotlin. On the backend, multi-wallet support was [added](https://github.com/raedahgroup/dcrlibwallet/pull/57) to dcrlibwallet, which uses a copy of dcrwallet's SPV module to sync all wallets in one process.
+Major [redesign](https://github.com/decred/dcrandroid/pull/401) of the user interface is finally merged after many months of work. This big change also included multi-wallet support (running more than one wallet concurrently). Most of the Java code was rewritten in Kotlin. On the backend, multi-wallet support was [added](https://github.com/raedahgroup/dcrlibwallet/pull/57) to dcrlibwallet, which uses a modified version of dcrwallet's SPV module to sync all wallets in one process.
 
 Other UI improvements include showing progress bar and estimated time remaining when [rescanning](https://github.com/decred/dcrandroid/pull/414) and the QR code scanner gaining the ability to detect [payment amounts](https://github.com/decred/dcrandroid/pull/411).
 
