--- a/journal/201912.md
+++ b/journal/201912.md
@@ -10,9 +10,9 @@ Happy New Year! Decred highlights for December:
 
 - The PoS upgrade threshold to trigger the headercommitments consensus rule change vote has already been met, and at time of writing the PoW upgrade measure is at 94.4% out of 95%, so it seems likely the voting period will begin around Jan 16 when the new Rule Change Interval begins.
 
-- Decred mainnet Lightning Network is up and growing. It is still early stages, so it is recommended to play with testnet first, and then use small amounts on mainnet.
+- Decred Lightning Network is live on mainnet! Check out @jholdstock's network [explorer](https://ln-map.jamieholdstock.com/). So far @matheusd is winning with 11 channels open. Remember: Lightning Network is still considered unstable, experimental, maybe even dangerous. Even experts like Matheus are only playing with a couple of credits.
 
-- Stakeholders approved a $30K budget for funding the development of TinyDecred, Decred's first Python project.
+- Stakeholders approved a $30K budget for funding the ongoing development of TinyDecred, an open source Python toolset.
 
 ## v1.5 Upgrade Notice
 
