--- a/journal/201912.md
+++ b/journal/201912.md
@@ -26,9 +26,7 @@ Finally, don't forget to set voting preferences for the `headercommitments` agen
 
 ## Development
 
-[dcrd](https://github.com/decred/dcrd):
-
-Checkpoint logic [simplified](https://github.com/decred/dcrd/pull/2014) to pave the way to support checkpoints based on headers alone. Checkpoints are now also [configurable](https://github.com/decred/dcrd/pull/2013) by the caller. Orphan handling decoupled and [moved](https://github.com/decred/dcrd/pull/2008) from blockchain to block manager. In the bigger picture, these changes will help to decouple the connection code from the download logic, as required for [multi-peer](https://github.com/decred/dcrd/issues/1145) parallel downloading.
+[dcrd](https://github.com/decred/dcrd): Checkpoint logic [simplified](https://github.com/decred/dcrd/pull/2014) to pave the way to support checkpoints based on headers alone. Checkpoints are now also [configurable](https://github.com/decred/dcrd/pull/2013) by the caller. Orphan handling decoupled and [moved](https://github.com/decred/dcrd/pull/2008) from blockchain to block manager. In the bigger picture, these changes will help to decouple the connection code from the download logic, as required for [multi-peer](https://github.com/decred/dcrd/issues/1145) parallel downloading.
 
 Memory usage of conditional execution logic in txscript [optimized](https://github.com/decred/dcrd/pull/2011) by replacing the condition stack with two integers.
 
@@ -36,43 +34,25 @@ Support for bech32 addresses enhanced with convenience functions [added](https:/
 
 Memory leak [fixed](https://github.com/decred/dcrd/pull/2027) that was especially relevant for setups that involve wallets with a very large number of addresses.
 
-[dcrwallet](https://github.com/decred/dcrwallet): Bug fixes, dependency updates.
-
-createrawtransaction method [implemented](https://github.com/decred/dcrwallet/pull/1623) directly in dcrwallet so it may be called in SPV syncing mode or when the wallet is not syncing. It was previously only available in RPC syncing mode and required running a dcrd instance.
+[dcrwallet](https://github.com/decred/dcrwallet): createrawtransaction method [implemented](https://github.com/decred/dcrwallet/pull/1623) directly in dcrwallet so it may be called in SPV syncing mode or when the wallet is not syncing. It was previously only available in RPC syncing mode and required running a dcrd instance.
 
 txsizes package was [exported](https://github.com/decred/dcrwallet/pull/1573) for reuse by dcrdex and dcrdata.
 
-[Decrediton](https://github.com/decred/decrediton): Bug fixes, dependency upgrades.
+[Decrediton](https://github.com/decred/decrediton): Numerous bugs squashed, including a bug in [Trezor wallet](https://github.com/decred/decrediton/pull/2362) that could be triggered if the Trezor wallet received funds from a non-dcrwallet sender that did not set the Sequence field properly.
 
-Numerous bugs squashed, including a bug in [Trezor wallet](https://github.com/decred/decrediton/pull/2362) that could be triggered if the Trezor wallet received funds from a non-dcrwallet sender that did not set the Sequence field properly.
+[Politeia](https://github.com/decred/politeia): The main focus of Politeia development for December was fixing an issue where [status change](https://github.com/decred/politeia/pull/1073) signature was not saved, and another where [start vote](https://github.com/decred/politeia/pull/1088) signature was only a signature of the proposal token while it should be a signature of the entire Vote structure (which also includes vote params and options). The issues had no impact on users. The fixes are not backwards compatible so they required versioning the metadata. Since versioning of the start vote metadata was required anyway, the second fix also adds changes that will make supporting [RFP proposals](https://github.com/decred/politeia/issues/966) easier.
 
-[Politeia](https://github.com/decred/politeia): Backend work to support CMS, bug fixes.
-
-The main focus of Politeia development for December was fixing an issue where [status change](https://github.com/decred/politeia/pull/1073) signature was not saved, and another where [start vote](https://github.com/decred/politeia/pull/1088) signature was only a signature of the proposal token while it should be a signature of the entire Vote structure (which also includes vote params and options). The issues had no impact on users. The fixes are not backwards compatible so they required versioning the metadata. Since versioning of the start vote metadata was required anyway, the second fix also adds changes that will make supporting [RFP proposals](https://github.com/decred/politeia/issues/966) easier.
-
-CMS redesign work is [in progress](https://github.com/decred/politeiagui/pull/1605).
+Backend work to support CMS continues, CMS UI redesign is [in progress](https://github.com/decred/politeiagui/pull/1605).
 
 [dcrpool](https://github.com/decred/dcrpool): Added backend support for processing manual [payment requests](https://github.com/decred/dcrpool/pull/140), which allows to clear any remaining balance before leaving the pool. Extensive [test coverage](https://github.com/decred/dcrpool/pull/141) added for most components.
 
-[dcrlnd](https://github.com/decred/dcrlnd):
-
-Map of the Decred LN on mainnet is [live](https://ln-map.jamieholdstock.com/). Note that while LN has been integrated into Decrediton, it should still be considered as in alpha form. If looking to use LN on mainnet, it is recommended to start on testnet, make sure you're comfortable with operations you want to do on mainnet, and not use large amounts.
+[dcrlnd](https://github.com/decred/dcrlnd): Map of the Decred LN on mainnet is [live](https://ln-map.jamieholdstock.com/). Note that while LN has been integrated into Decrediton, it should still be considered as in alpha form. If looking to use LN on mainnet, it is recommended to start on testnet, make sure you're comfortable with operations you want to do on mainnet, and not use large amounts.
 
 Port selection [modified](https://github.com/decred/dcrlnd/pull/62) to make integration tests more robust. Docker build [added](https://github.com/decred/dcrlnd/pull/67) to Github actions. Removed [decred prefix](https://github.com/decred/dcrlnd/pull/68). Work continues on [Docker examples](https://github.com/decred/dcrlnd/pull/66) to automate simnet environments with all you need to run a LN cluster.
 
-[dcrdex](https://github.com/decred/dcrdex):
+[dcrdex](https://github.com/decred/dcrdex): New components implemented include [BTC exchange wallet](https://github.com/decred/dcrdex/pull/72), [client orderbook backend](https://github.com/decred/dcrdex/pull/79) and further [integration](https://github.com/decred/dcrdex/pull/85) between the market manager, order router and book routers.
 
-New components implemented:
-
-- [BTC exchange wallet](https://github.com/decred/dcrdex/pull/72)
-- [client orderbook backend](https://github.com/decred/dcrdex/pull/79)
-- further [integration](https://github.com/decred/dcrdex/pull/85) between the market manager, order router and book routers
-
-Other changes:
-
-- [order commitments](https://github.com/decred/dcrdex/pull/83) added to spec
-- order timestamp resolution changed from seconds to [milliseconds](https://github.com/decred/dcrdex/pull/96)
-- completed switch to [coin ID](https://github.com/decred/dcrdex/pull/91), which allows for supporting more assets in the future
+In other changes: [order commitments](https://github.com/decred/dcrdex/pull/83) added to spec, order timestamp resolution changed from seconds to [milliseconds](https://github.com/decred/dcrdex/pull/96), completed switch to [coin ID](https://github.com/decred/dcrdex/pull/91), which allows for supporting more assets in the future.
 
 Remaining tasks for the DEX are:
 
@@ -80,31 +60,21 @@ Remaining tasks for the DEX are:
 - on the client: web UI (under review), terminal UI (in draft), DCR wallet (under review), book manager and a persistent database (under review)
 - RPC servers for the server and the client
 
-[dcrandroid](https://github.com/decred/dcrandroid):
-
-Major [redesign](https://github.com/decred/dcrandroid/pull/401) of the user interface is finally merged after many months of work. This big change also included multi-wallet support (running more than one wallet concurrently). Remaining Java code and files have been converted to Kotlin. On the backend, multi-wallet support was [added](https://github.com/raedahgroup/dcrlibwallet/pull/57) to dcrlibwallet, which uses a modified version of dcrwallet's SPV module to sync all wallets in one process.
+[dcrandroid](https://github.com/decred/dcrandroid): Major [redesign](https://github.com/decred/dcrandroid/pull/401) of the user interface is finally merged after many months of work. This big change also included multi-wallet support (running more than one wallet concurrently). Remaining Java code and files have been converted to Kotlin. On the backend, multi-wallet support was [added](https://github.com/raedahgroup/dcrlibwallet/pull/57) to dcrlibwallet, which uses a modified version of dcrwallet's SPV module to sync all wallets in one process.
 
 Other UI improvements include showing progress bar and estimated time remaining when [rescanning](https://github.com/decred/dcrandroid/pull/414) and the QR code scanner gaining the ability to detect [payment amounts](https://github.com/decred/dcrandroid/pull/411).
 
 Security enhancements: users can now unlock the app with their [fingerprint](https://github.com/decred/dcrandroid/pull/413), address validation was [moved](https://github.com/decred/dcrandroid/pull/421) to security tools.
 
-[dcrios](https://github.com/raedahgroup/dcrios):
-
-UI enhancements continue with updated [colors](https://github.com/raedahgroup/dcrios/pull/556) and [improved](https://github.com/raedahgroup/dcrios/pull/555) menu rendering.
+[dcrios](https://github.com/raedahgroup/dcrios): UI enhancements continue with updated [colors](https://github.com/raedahgroup/dcrios/pull/556) and [improved](https://github.com/raedahgroup/dcrios/pull/555) menu rendering.
 
 Work continues on [multi-wallet](https://github.com/raedahgroup/dcrios/pull/558) support, and revamped UI for [send](https://github.com/raedahgroup/dcrios/pull/557) and [receive](https://github.com/raedahgroup/dcrios/pull/553) views.
 
 [dcrdata](https://github.com/decred/dcrdata): Merged initial CSPP [mix detection](https://github.com/decred/dcrdata/pull/1610), bug fixes and code maintenance.
 
-[tinydecred](https://github.com/decred/tinydecred):
+[tinydecred](https://github.com/decred/tinydecred): Added display of current voting agendas and a menu to set [vote choice](https://github.com/decred/tinydecred/pull/25), automated code formatting with the [Black](https://github.com/decred/tinydecred/pull/27) tool, bug fixes and test improvements.
 
-- added display of current agendas and a menu to set [vote choice](https://github.com/decred/tinydecred/pull/25)
-- automated code formatting with the [Black](https://github.com/decred/tinydecred/pull/27) tool
-- bug fixes and test improvements
-
-[docs](https://github.com/decred/dcrdocs):
-
-Docs [updated](https://github.com/decred/dcrdocs/pull/1005) for v1.5 release. Warning about scam airdrops [added](https://github.com/decred/dcrdocs/pull/1035). [Forking terms](https://github.com/decred/dcrdocs/pull/1018) added to Glossary.
+[docs](https://github.com/decred/dcrdocs): Docs [updated](https://github.com/decred/dcrdocs/pull/1005) for v1.5 release. Warning about scam airdrops [added](https://github.com/decred/dcrdocs/pull/1035). [Forking terms](https://github.com/decred/dcrdocs/pull/1018) added to Glossary.
 
 [decred.org](https://github.com/decred/dcrweb): Minor content updates, dependency upgrades.
 
