Intro: toolset -> toolkit

--- a/journal/201912.md
+++ b/journal/201912.md
@@ -12,7 +12,7 @@ Happy New Year! Decred highlights for December:
 
 - Decred Lightning Network is live on mainnet! Check out @jholdstock's network [explorer](https://ln-map.jamieholdstock.com/). So far @matheusd is winning with 11 channels open. Remember: Lightning Network is still considered unstable, experimental, maybe even dangerous! Even experts like Matheus are only playing with a couple of credits.
 
-- Stakeholders approved a $30K budget for funding the ongoing development of TinyDecred, an open source Python toolset.
+- Stakeholders approved a $30K budget for funding the ongoing development of TinyDecred, an open source Python toolkit.
 
 ## v1.5 Upgrade Notice
 
