--- a/journal/201912.md
+++ b/journal/201912.md
@@ -1,8 +1,8 @@
 # {DRAFT} Decred Journal – December 2019
 
-![{alt text}](../img/{file.jpg} "{hover tooltip text}")
+![abstract art](../img/journal-201912-384.png)
 
-_Image: {caption: "$title by $author. $optional-description" for artwork, or just "$description" for photos}_
+_Image: Icyhedron by @saender_
 
 Happy New Year! Decred highlights for December:
 
@@ -312,4 +312,4 @@ Credits (alphabetical order):
 
 - writing and editing: akinsawyerr, bee, Dustorf, degeri, fguisso, kozel, margaret\_mei, richardred, s\_ben
 - reviews and feedback: buck54321, chappjc, Checkmate, davecgh, dnldd, lukebp, matheusd, raedah
-- title image: {}
+- title image: saender
