--- a/journal/201912.md
+++ b/journal/201912.md
@@ -115,6 +115,8 @@ December was an unusually quiet month for Politeia, with no new proposals submit
 - The [TinyDecred budget](https://proposals.decred.org/proposals/ad0f9688b3467734e2581604914b2cc32c6eb7991dff460eff41d21f66d88451) proposal was approved with 85% approval and voter participation of 32.6%.
 - The [PlusBit POS App](https://proposals.decred.org/proposals/e559188b0febcab29c49c1f7dd5c66645e31be00894a150ef7d0b8ceb6486605) was rejected with 39% approval and participation of 30.6%.
 
+Ditto has submitted their [phase 3](https://proposals.decred.org/proposals/012b4e335f25704e28ef196d650316dca421f730225d39e37b31b3c646eb8497) communications proposal on Jan 7, discussion is ongoing.
+
 Following [analysis](https://www.blockcommons.red/publication/mm-tracking-1/) of the public orderbooks which raised questions about the level of liquidity provision, i2 Trading have provided full trading history logs that will allow for their performance to be scrutinized in detail. Company 0 are working on a set of tools for auditing i2's performance in relation to the criteria specified in their proposal.
 
 Politeia Digest has been taking a break while the level of Politeia activity is low, it will return when new proposals are submitted.
