--- a/journal/201912.md
+++ b/journal/201912.md
@@ -8,7 +8,7 @@ Happy New Year! Decred highlights for December:
 
 - The final v1.5 release occurred on Dec 16, thanks to everyone who helped out by testing release candidates.
 
-- The PoS upgrade threshold to trigger the headercommitments consensus rule change vote has already been met, and at time of writing the PoW upgrade measure is at 94.4% out of 95%, so it seems likely the voting period will begin around Jan 16 when the new Rule Change Interval begins.
+- The PoS and PoW upgrade thresholds to trigger the headercommitments consensus rule change vote have already been met. The voting period will begin around Jan 16 when the new Rule Change Interval begins.
 
 - Decred Lightning Network is live on mainnet! Check out @jholdstock's network [explorer](https://ln-map.jamieholdstock.com/). So far @matheusd is winning with 11 channels open. Remember: Lightning Network is still considered unstable, experimental, maybe even dangerous! Even experts like Matheus are only playing with a couple of credits.
 
@@ -18,7 +18,7 @@ Happy New Year! Decred highlights for December:
 
 v1.5.0 release is out after about 5 weeks of testing and polishing. The new version brings many improvements covered in [October](201910.md#v15-release-candidates) issue. For full release notes and downloads visit the [release page](https://github.com/decred/decred-binaries/releases/tag/v1.5.0) on GitHub. As always, [verify the downloads](https://docs.decred.org/advanced/verifying-binaries/) before installing.
 
-If you're mining and haven't upgraded, it is recommended to upgrade soon to avoid potentially having a block rejected due to being an old version once the threshold is hit.
+If you're mining and haven't upgraded, it is recommended to upgrade to avoid potentially having a block rejected due to being an old version.
 
 Upgrade and vote progress is shown at [voting.decred.org](https://voting.decred.org/), more details and charts are available at dcrdata's [agendas](https://explorer.dcrdata.org/agendas) page.
 
